--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+
+:root{
+    /* color-scheme: light dark; */
+}
+
+body {
+    background: #0C3552;
+    /* position: relative;
+    display: grid;
+    place-items: center;
+    margin: 0; */
+    color: #fff;
+}
