--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,43 @@
-
-:root{
+:root {
     /* color-scheme: light dark; */
 }
 
-body {
-    background: #0C3552;
-    /* position: relative;
-    display: grid;
-    place-items: center;
-    margin: 0; */
-    color: #fff;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+body{
+    background-color: #E5E5E5;
+}
+
+.neumorphic {
+    background-color: #E5E5E5;
+    border-left: 2px solid #fff;
+    border-top: 2px solid #fff;
+    box-shadow:
+        -8px -8px 10px rgba(255, 255, 255, .6),
+        5px 5px 10px rgba(0, 0, 0, 0.45);
+}
+
+.neumorphic-low {
+    background-color: #E5E5E5;
+    border-left: 2px solid #fff;
+    border-top: 2px solid #fff;
+    box-shadow:
+        -5px -5px 8px rgba(255, 255, 255, .6),
+        5px 5px 8px rgba(0, 0, 0, 0.45);
+}
+
+.glass-box {
+      width: 10px;
+      height: 100px;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.15);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(16px) saturate(180%);
+      -webkit-backdrop-filter: blur(16px) saturate(180%);
+      border: 1px solid rgba(255, 255, 255, 0.3);
 }
