Cambios despues de la junta en discord

--- a/src/app/widgets/button-log-out/button-log-out.component.html
+++ b/src/app/widgets/button-log-out/button-log-out.component.html
@@ -1,1 +1,5 @@
-<button class="logout-btn" (click)="logout()">LogOut</button>
+<button class="logout-btn" (click)="logout()">
+    <span class="material-symbols-outlined d-flex">
+        logout
+    </span>
+</button>
