--- a/src/app/widgets/side.menu/side.menu.component.html
+++ b/src/app/widgets/side.menu/side.menu.component.html
@@ -1,21 +1,29 @@
 <div class="sidebar">
 
     <div class="home" (click)="hrefHome()">
-      <div class="circle neumorphic-low"></div>
+      <button type="button" class="btn btn-rounded neumorphic-low p-2">
+        <span class="material-symbols-outlined m-auto">
+          home
+        </span>
+      </button>
       <span>Home</span>
     </div>
 
-    <div class="menu-item" (click)="hrefStudets()">
-      <div class="icon"></div>
+    <div class="menu-item" (click)="hrefStudets(); selectOption('Students');">
+      <div class="icon">
+        <span class="material-symbols-outlined">
+          school
+        </span>
+      </div>
       <span>Students</span>
     </div>
 
-    <div class="menu-item" (click)="hrefTeachers()">
+    <div class="menu-item" (click)="hrefTeachers(); selectOption('Teachers');">
       <div class="icon"></div>
       <span>Teachers</span>
     </div>
 
-    <div class="menu-item" (click)="hrefCours()">
+    <div class="menu-item" (click)="hrefCours(); selectOption('Courses');">
       <div class="icon"></div>
       <span>Courses</span>
     </div>
