--- a/src/app/widgets/input-search/input-search.component.html
+++ b/src/app/widgets/input-search/input-search.component.html
@@ -1,5 +1,5 @@
 <!-- Input con lupa dentro -->
-  <div class="search-wrapper">
+  <div class="search-wrapper neumorphic-reverse">
     <input type="text" placeholder="Search....">
     <div class="icon">
         <span class="material-symbols-outlined">
