Ya se mueve el carusel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
 
     <h1 class="text-center text-2xl font-semibold uppercase mb-6 px-4">Bienvenidos</h1>
 
-    <div id="carouselExampleAutoplaying" class="carousel relative w-full max-w-4xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden mb-12  border-red-500" data-bs-ride="carousel">
+    <div id="carouselExampleAutoplaying" class="carousel relative w-full max-w-4xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden mb-12  border-red-500" data-bs-ride="carousel" data-bs-target="3000">
 
       <div class="carousel-inner relative w-full overflow-hidden">
         <div class="carousel-item active relative float-left w-full">
@@ -32,12 +32,6 @@
       </button>
 
     </div> 
-
-    <div class="flex justify-center gap-6 mt-12 px-4 border border-blue-500">
-      <button class="bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700 transition">Students</button>
-      <button class="bg-green-600 text-white px-5 py-2 rounded hover:bg-green-700 transition">Teachers</button>
-      <button class="bg-red-600 text-white px-5 py-2 rounded hover:bg-red-700 transition">Courses</button>
-    </div>
 
   </div> 
 
