--- a/src/app/widgets/side.menu/side.menu.component.html
+++ b/src/app/widgets/side.menu/side.menu.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
 
-    <div class="home" (click)="hrefHome()">
+    <div class="home" (click)="hrefHome(); selectOption('Home');" [class.activeHome]=" selectedOption === 'Home'" >
       <button type="button" class="btn btn-rounded neumorphic-low p-2">
         <span class="material-symbols-outlined m-auto">
           home
@@ -9,7 +9,7 @@
       <span>Home</span>
     </div>
 
-    <div class="menu-item" (click)="hrefStudets(); selectOption('Students');">
+    <div class="menu-item" (click)="hrefStudets(); selectOption('Students');" [class.active]=" selectedOption === 'Students'">
       <div class="icon">
         <span class="material-symbols-outlined">
           school
@@ -18,13 +18,21 @@
       <span>Students</span>
     </div>
 
-    <div class="menu-item" (click)="hrefTeachers(); selectOption('Teachers');">
-      <div class="icon"></div>
+    <div class="menu-item" (click)="hrefTeachers(); selectOption('Teachers');" [class.active]=" selectedOption === 'Teachers' ">
+      <div class="icon">
+        <span class="material-symbols-outlined">
+          groups
+        </span>
+      </div>
       <span>Teachers</span>
     </div>
 
-    <div class="menu-item" (click)="hrefCours(); selectOption('Courses');">
-      <div class="icon"></div>
+    <div class="menu-item" (click)="hrefCours(); selectOption('Courses');" [class.active]=" selectedOption === 'Courses' ">
+      <div class="icon">
+        <span class="material-symbols-outlined">
+          book_2
+        </span>
+      </div>
       <span>Courses</span>
     </div>
 
