--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -30,9 +30,9 @@ section {
 
 input {
   width: 100%;
-  padding: 8px 12px;
+  padding: 12px;
   border-radius: 8px;
-  margin-top: 10px;
+  margin-top: 15px;
   background-color: rgba(0, 0, 0, 0.3);
   color: #ffffff;
   font-size: 14px;
