--- a/src/app/widgets/tabla/tabla.component.css
+++ b/src/app/widgets/tabla/tabla.component.css
@@ -5,7 +5,7 @@
       max-width: 1000px;
     }
 
-    table {
+    .Mytable {
       width: 100%;
       border-collapse: collapse;
       min-width: 600px;
@@ -45,4 +45,9 @@
       padding: 3px 10px;
       color: #4d4a4a;
       border-radius: 10px;
+    }
+
+    .modal-dialog{
+      max-width: 900px;
+      width: 90%;
     }
